Update index.html with Portfolio changes

--- a/index.html
+++ b/index.html
@@ -36,5 +36,104 @@
             </ul>
         </div>
     </section>
+    <section class="works-section">
+        <div class="work-card">
+            <div class="work-image">
+                <img src="images/work1.png">
+            </div>
+            <div class="work-details">
+                <h1>Tonic</h1>
+                <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
+                <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="languages">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <p class="project-btn"><a href="">See Project</a></p>
+            </div>
+        </div>
+        <div class="work-card">
+            <div class="work-image">
+                <img src="images/work2.png">
+            </div>
+            <div class="work-details">
+                <h1>Multi-Post<br> Stories</h1>
+                <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
+                <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="languages">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <p class="project-btn"><a href="">See Project</a></p>
+            </div>
+        </div>        
+        <div class="work-card">
+            <div class="work-image">
+                <img src="images/work3.png">
+            </div>
+            <div class="work-details">
+                <h1>Tonic</h1>
+                <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
+                <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="languages">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <p class="project-btn"><a href="">See Project</a></p>
+            </div>
+        </div>        
+        <div class="work-card">
+            <div class="work-image">
+                <img src="images/work4.png">
+            </div>
+            <div class="work-details">
+                <h1>Multi-Post<br> Stories</h1>
+                <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
+                <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="languages">
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                </ul>
+                <p class="project-btn"><a href="">See Project</a></p>
+            </div>
+        </div>        
+    </section>
+    <section class="contact-section">
+        <div class="primary-text">
+            <h1 style="margin-top: 114px;">About<br>Myself</h1>
+        </div>
+        <div class="primary-text">
+            <p style="text-align: left;">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        </div>
+        <div class="social-media reset-margin">
+            <p class="connect">LET'S CONNECT</p>
+            <ul class="socials">
+                <li><a href=""><img src="images/1.png" alt="twitter"></a></li>
+                <li><a href=""><img src="images/2.png" alt="linkedin"></a></li>
+                <li><a href=""><img src="images/3.png" alt="em"></a></li>
+                <li><a href=""><img src="images/4.png" alt="github"></a></li>
+                <li><a href=""><img src="images/5.png" alt="angellist"></a></li>
+            </ul>
+        </div>
+        <p class="resume-btn"><a href="">Get my resume</a></p>
+        <div class="experience">
+            <ul class="outer-list">
+                <li>
+                    Languages
+                    <ul class="inner-list">
+                        <li><img src="images/js.png"> <span>JavaScript</span></li>
+                        <li><img src="images/html.png"> <span>HTML</span></li>
+                        <li><img src="images/css.png"> <span>CSS</span></li>
+                    </ul>
+                </li>
+                <li>Frameworks</li>
+                <li>Skills</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
