--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="works-section">
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work1.png">
+                <img src="images/work1.png" alt="work 1">
             </div>
             <div class="work-details">
                 <h1>Tonic</h1>
@@ -55,7 +55,7 @@
         </div>
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work2.png">
+                <img src="images/work2.png" alt="work 2">
             </div>
             <div class="work-details">
                 <h1>Multi-Post<br> Stories</h1>
@@ -71,7 +71,7 @@
         </div>        
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work3.png">
+                <img src="images/work3.png" alt="work 3">
             </div>
             <div class="work-details">
                 <h1>Tonic</h1>
@@ -87,7 +87,7 @@
         </div>        
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work4.png">
+                <img src="images/work4.png" alt="work 4">
             </div>
             <div class="work-details">
                 <h1>Multi-Post<br> Stories</h1>
@@ -104,10 +104,10 @@
     </section>
     <section class="contact-section">
         <div class="primary-text">
-            <h1 style="margin-top: 114px;">About<br>Myself</h1>
+            <h1 class="primary-text-change">About<br>Myself</h1>
         </div>
         <div class="primary-text">
-            <p style="text-align: left;">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+            <p class="primary-margin-change">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </div>
         <div class="social-media reset-margin">
             <p class="connect">LET'S CONNECT</p>
@@ -125,9 +125,9 @@
                 <li>
                     Languages
                     <ul class="inner-list">
-                        <li><img src="images/js.png"> <span>JavaScript</span></li>
-                        <li><img src="images/html.png"> <span>HTML</span></li>
-                        <li><img src="images/css.png"> <span>CSS</span></li>
+                        <li><img src="images/js.png" alt="js"> <span>JavaScript</span></li>
+                        <li><img src="images/html.png" alt="html"> <span>HTML</span></li>
+                        <li><img src="images/css.png" alt="css"> <span>CSS</span></li>
                     </ul>
                 </li>
                 <li>Frameworks</li>
