Update index.html following first review

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="images/work1.png" alt="work 1">
             </div>
             <div class="work-details">
-                <h1>Tonic</h1>
+                <h2>Tonic</h2>
                 <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
                 <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <ul class="languages">
@@ -50,7 +50,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <p class="project-btn"><a href="">See Project</a></p>
+                <button class="project-btn"><a href="">See Project</a></button>
             </div>
         </div>
         <div class="work-card">
@@ -58,7 +58,7 @@
                 <img src="images/work2.png" alt="work 2">
             </div>
             <div class="work-details">
-                <h1>Multi-Post<br> Stories</h1>
+                <h2>Multi-Post<br> Stories</h2>
                 <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
                 <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <ul class="languages">
@@ -66,7 +66,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <p class="project-btn"><a href="">See Project</a></p>
+                <button class="project-btn"><a href="">See Project</a></button>
             </div>
         </div>        
         <div class="work-card">
@@ -74,7 +74,7 @@
                 <img src="images/work3.png" alt="work 3">
             </div>
             <div class="work-details">
-                <h1>Tonic</h1>
+                <h2>Tonic</h2>
                 <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
                 <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <ul class="languages">
@@ -82,7 +82,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <p class="project-btn"><a href="">See Project</a></p>
+                <button class="project-btn"><a href="">See Project</a></button>
             </div>
         </div>        
         <div class="work-card">
@@ -90,7 +90,7 @@
                 <img src="images/work4.png" alt="work 4">
             </div>
             <div class="work-details">
-                <h1>Multi-Post<br> Stories</h1>
+                <h2>Multi-Post<br> Stories</h2>
                 <p class="work-subtext">CANOPY<span class="dot"></span><span class="description">Back End Dev</span><span class="dot"></span><span class="description">2015</span> </p>
                 <p class="work-description">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <ul class="languages">
@@ -98,7 +98,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <p class="project-btn"><a href="">See Project</a></p>
+                <button class="project-btn"><a href="">See Project</a></button>
             </div>
         </div>        
     </section>
@@ -119,19 +119,19 @@
                 <li><a href=""><img src="images/5.png" alt="angellist"></a></li>
             </ul>
         </div>
-        <p class="resume-btn"><a href="">Get my resume</a></p>
+        <button class="resume-btn"><a href="">Get my resume</a></button>
         <div class="experience">
             <ul class="outer-list">
                 <li>
-                    Languages
+                    Languages<i class="arrow down"></i>
                     <ul class="inner-list">
                         <li><img src="images/js.png" alt="js"> <span>JavaScript</span></li>
                         <li><img src="images/html.png" alt="html"> <span>HTML</span></li>
                         <li><img src="images/css.png" alt="css"> <span>CSS</span></li>
                     </ul>
                 </li>
-                <li>Frameworks</li>
-                <li>Skills</li>
+                <li>Frameworks<i class="arrow right"></i></li>
+                <li>Skills<i class="arrow right"></i></li>
             </ul>
         </div>
     </section>
