Update index.html following linter errors

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <button class="project-btn"><a href="">See Project</a></button>
+                <a class="project-btn" href="">See Project</a>
             </div>
         </div>
         <div class="work-card">
@@ -66,7 +66,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <button class="project-btn"><a href="">See Project</a></button>
+                <a class="project-btn" href="">See Project</a>
             </div>
         </div>        
         <div class="work-card">
@@ -82,7 +82,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <button class="project-btn"><a href="">See Project</a></button>
+                <a class="project-btn" href="">See Project</a>
             </div>
         </div>        
         <div class="work-card">
@@ -98,7 +98,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <button class="project-btn"><a href="">See Project</a></button>
+                <a class="project-btn" href="">See Project</a>
             </div>
         </div>        
     </section>
@@ -119,7 +119,7 @@
                 <li><a href=""><img src="images/5.png" alt="angellist"></a></li>
             </ul>
         </div>
-        <button class="resume-btn"><a href="">Get my resume</a></button>
+        <a class="resume-btn" href="">Get my resume</a>
         <div class="experience">
             <ul class="outer-list">
                 <li>
