--- a/index.html
+++ b/index.html
@@ -135,5 +135,15 @@
             </ul>
         </div>
     </section>
+    <form class="contact-form" action="https://formspree.io/f/xoqrojoe" method="post">
+        <h2>Contact me</h2>
+        <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it </p>
+        <ul class="contact-list">
+            <li class="contact-list-item"><input type="text" name="name" placeholder="Enter your name" required maxlength="30"></li>
+            <li class="contact-list-item"><input type="email" name="email" placeholder="Enter your email" required></li class="contact-list-item">
+            <li class="contact-list-item"><textarea maxlength="500" name="message" placeholder="Write your message here" required></textarea></li class="contact-list-item">
+            <li class="contact-list-item"><button type="submit">Get In Touch</button></li class="contact-list-item">
+        </ul>
+    </form>
 </body>
 </html>
