--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="primary-text">
             <p>I'm a software developer! I can help you build a product, feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
         </div>
-        <div class="social-media">
+        <div class="primary-text social-media">
             <p class="connect">LET'S CONNECT</p>
             <ul class="socials">
                 <li><a href=""><img src="images/1.png" alt="twitter"></a></li>
@@ -41,10 +41,10 @@
             </ul>
         </div>
     </section>
-    <section class="works-section">
+    <section class="center-margin works-section">
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work1.png" alt="work 1">
+                <img src="images/work1.svg" alt="work 1">
             </div>
             <div class="work-image-large">
                 <img src="images/work-1-lg.png" alt="large image">
@@ -58,12 +58,12 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <a class="project-btn" href="">See Project</a>
+                <a class="project-btn button-margin" href="">See Project</a>
             </div>
         </div>
         <div class="work-card  work-reverse">
             <div class="work-image">
-                <img src="images/work2.png" alt="work 2">
+                <img src="images/work2.svg" alt="work 2">
             </div>
             <div class="work-image-large">
                 <img src="images/work-2-lg.png" alt="large image">
@@ -77,12 +77,12 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <a class="project-btn" href="">See Project</a>
+                <a class="project-btn button-margin" href="">See Project</a>
             </div>
         </div>        
         <div class="work-card">
             <div class="work-image">
-                <img src="images/work3.png" alt="work 3">
+                <img src="images/work3.svg" alt="work 3">
             </div>
             <div class="work-image-large">
                 <img src="images/work-3-lg.png" alt="large image">
@@ -96,12 +96,12 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <a class="project-btn" href="">See Project</a>
+                <a class="project-btn button-margin" href="">See Project</a>
             </div>
         </div>        
         <div class="work-card work-reverse">
             <div class="work-image">
-                <img src="images/work4.png" alt="work 4">
+                <img src="images/work4.svg" alt="work 4">
             </div>
             <div class="work-image-large">
                 <img src="images/work-4-lg.png" alt="large image">
@@ -115,7 +115,7 @@
                     <li>css</li>
                     <li>javascript</li>
                 </ul>
-                <a class="project-btn" href="">See Project</a>
+                <a class="project-btn button-margin" href="">See Project</a>
             </div>
         </div>        
     </section>
@@ -137,7 +137,7 @@
                     <li><a href=""><img src="images/5.png" alt="angellist"></a></li>
                 </ul>
             </div>
-            <a class="resume-btn" href="">Get my resume</a>
+            <a class="resume-btn button-margin" href="">Get my resume</a>
         </div>
         <div class="experience">
             <ul class="outer-list">
